# concavum-customizer

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.toml  default.nix  flake.nix  kikit-parameters.json
.github/workflows/: deploy-to-pages.yaml  release.yml
bom/: Cargo.toml
bom/src/: lib.rs
config/: Cargo.toml
config/src/: columns.rs  default.toml  lib.rs  primitives.rs
customizer/: Cargo.toml
customizer/src/: lib.rs  main.rs
customizer_wasm/: Cargo.toml  rust-toolchain.toml
customizer_wasm/.cargo/: config.toml
customizer_wasm/src/: lib.rs
gui/: Cargo.toml
gui/src/: config.rs  file_menu.rs  lib.rs  model.rs  reload.rs  update.rs
model/: Cargo.toml
model/src/: geometry.rs  interface_pcb.rs  lib.rs  matrix_pcb.rs  util.rs
model/src/key_positions/: columns.rs  mod.rs  thumb_keys.rs
model/src/keyboard/: bottom_plate.rs  bounds.rs  finger_cluster.rs  insert_holder.rs  mod.rs  thumb_cluster.rs
model/src/matrix_pcb/: cluster_connector.rs  connectors.rs  mod.rs  segments.rs
model/src/primitives/: mod.rs  operations.rs  shapes2d.rs  shapes3d.rs  vector.rs
pcb/: Cargo.toml
pcb/src/: kicad_pcb.rs  lib.rs  main.rs  matrix_pcb.rs  path.rs  primitives.rs  serializer.rs  unit.rs
pcb/src/footprints/: ffc_connector.rs  fpc_connector.rs  key.rs  mod.rs  switch.rs  tab.rs
pcb/src/kicad_pcb/: mod.rs  serializer.rs
pcb/src/matrix_pcb/: builder.rs  key_positions.rs  mod.rs  nets.rs  panelize.rs  panelizer.rs  switch_positions.rs
pcb/src/matrix_pcb/connector/: curved_connector.rs  mod.rs  straight_connector.rs
pcb/src/matrix_pcb/connectors/: cluster_connector.rs  column_connector.rs  mod.rs
pcb/src/matrix_pcb/features/: column.rs  ffc_connector.rs  mod.rs  thumb_switches.rs
qmk/: Cargo.toml
qmk/src/: keyboard.json  keyboard.rs  keymap.rs  layout.rs  lib.rs  replace_indented.rs
show/: Cargo.toml
show/src/: lib.rs
show_derive/: Cargo.toml
show_derive/src/: lib.rs
src/: config.rs  main.rs  model.rs  window.rs
src/model/: cluster_bounds.rs  config.rs  finger_cluster.rs  geometry.rs  helper.rs  insert_holder.rs  interface_pcb.rs  key.rs  key_cluster.rs  key_positions.rs  mod.rs  primitives.rs  thumb_cluster.rs  util.rs
src/model/key_positions/: columns.rs  mod.rs  thumb_keys.rs
src/model/keyboard/: bottom_plate.rs  bounds.rs  finger_cluster.rs  insert_holder.rs  mod.rs  thumb_cluster.rs
src/model/primitives/: mod.rs  operations.rs  shapes.rs  shapes2d.rs  shapes3d.rs  vector.rs
src/viewer/: file_watcher.rs  material.rs  mod.rs  model.rs  reload.rs  scene.rs  window.rs
viewer/: Cargo.toml  build.rs
viewer/src/: file_watcher.rs  lib.rs  main.rs  material.frag  material.rs  reload.rs  scene.rs  window.rs
viewer/src/objects/: interface_pcbs.rs  keyboard.rs  keyboard_preview.rs  keys.rs  matrix_pcbs.rs  mod.rs
web/: index.html  index.js  worker.js
