[workspace]
members = [
  "config",
  "customizer",
  "customizer_wasm",
  "gui",
  "model",
  "show",
  "show_derive",
  "viewer",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
config = { path = "config" }
console_error_panic_hook = "0.1"
earcutr = "0.4"
fidget = { git = "https://github.com/julianschuler/fidget.git", branch = "static-singular-value-truncation", default-features = false, features = ["jit", "mesh"] }
glam = { version = "0.29", features = ["serde"] }
gui = { path = "gui" }
hex_color = { version = "3.0", features = ["serde"] }
model = { path = "model" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
pollster = "0.3"
quote = "1.0"
rfd = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
show = { path = "show" }
show_derive = { path = "show_derive" }
syn = "2.0"
thiserror = "1.0"
three-d = { version = "0.17", features = ["egui-gui"] }
toml = "0.8"
viewer = { path = "viewer" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Worker"] }
web-time = "1.1"
zip = { version = "2.2", default-features = false }

[workspace.lints.clippy]
pedantic = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[profile.dev]
opt-level = 2
