[workspace]
members = [
  "config",
  "customizer",
  "customizer_wasm",
  "gui",
  "model",
  "pcb",
  "qmk",
  "show",
  "show_derive",
  "viewer",
]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
config = { path = "config" }
console_error_panic_hook = "0.1"
earcutr = "0.5"
fidget = { version = "0.3.8", default-features = false, features = ["jit"] }
glam = { version = "0.30", features = ["serde"] }
gui = { path = "gui" }
hex_color = { version = "3.0", features = ["serde"] }
itertools = "0.14.0"
itoa = "1.0"
model = { path = "model" }
nalgebra = { version = "0.34", default-features = false, features = ["std"] }
pcb = { path = "pcb" }
pollster = "0.4"
qmk = { path = "qmk" }
quote = "1.0"
rfd = { version = "0.15" }
serde = { version = "1.0", features = ["derive"] }
show = { path = "show" }
show_derive = { path = "show_derive" }
syn = "2.0"
thiserror = "2.0"
three-d = { version = "0.18", features = ["egui-gui"] }
toml = "0.9"
uuid = { version = "1.17.0", features = ["fast-rng", "js", "v4"] }
viewer = { path = "viewer" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Worker"] }
web-time = "1.1"
zip = { version = "4.3", default-features = false }

[workspace.lints.clippy]
doc_markdown = { level = "allow", priority = 1 }
pedantic = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[profile.dev]
opt-level = 2
