[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
show = { workspace = true }
show_derive = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
