[package]
name = "customizer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
viewer.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
