[package]
name = "pcb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
glam.workspace = true
itoa.workspace = true
model.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
