[package]
name = "viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre = { workspace = true }
config = { workspace = true }
glam = { workspace = true }
gui = { workspace = true }
thiserror = { workspace = true }
three-d = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
